--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCqYeMa0KpmrUDehCvtVLDb7W8FOy6vA3Y"></script>
 <script src="/scripts/knockout-3.3.0.js" type="text/javascript"></script>
+<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+<link href="/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css">
+<script src="/scripts/bootstrap.min.js" type="text/css"></script>
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <style>
+body{
+  font-family: 'Lato', sans-serif;
+}
+span.no-select {
+  -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+  -moz-user-select: none; /* mozilla browsers */
+  -khtml-user-select: none; /* webkit (konqueror) browsers */
+  -ms-user-select: none; /* IE10+ */
+}
 .sidebar {
   position: absolute;
   background-color: whitesmoke;
@@ -44,6 +57,7 @@
 .searchbar-container{
   position: absolute;
   left: 100px;
+  top: 15px;
   display: block;
   width: 25%;
 }
@@ -67,38 +81,143 @@
   padding: 10px;
   box-shadow: 0px 2px white;
 }
-
+.header{
+  position: absolute;
+  top:0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  background-color: #2c3e50;
+}
+.body{
+  position: absolute;
+  top: 50px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.map{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.header-brand{
+  display: inline-block;
+  padding: 0 0 0 5px;
+  cursor: pointer;
+  text-decoration: none !important;
+}
+.carousel-control-button {
+  margin-top: 90%
+}
 </style>
 </head>
 <body>
-  <div id="mapCanvas" style="position: absolute; top:0; bottom: 0; left: 0; right: 0">
+  <div class="header">
+    <a class="header-brand">
+      <span style="color: #9b59b6; font-size: 2.5em; font-weight: bold">tour</span>
+      <span style="color: #ecf0f1; font-size: 2.5em; font-weight: bold">map</span>
+      <span style="color: #f39c12">alpha</span>
+    </a>
   </div>
-  <div>
+  <div class="body">
+    <div id="mapCanvas" class="map"></div>
     <div class="searchbar-container">
       <input data-bind="textInput: filterQuery" class="searchbar" style="display: block; width: 93%; padding: 10px">
-      <div data-bind="visible: showSuggestions, foreach: locations" class="searchsuggestions-container" style="width: 93%">
-        <p data-bind="text: name"></p>
-        <div class="marked-location" data-bind="text: infoWindowContent"></div>
+      <div data-bind="visible: showSuggestions, foreach: filteredLocations" class="searchsuggestions-container" style="width: 93%">
+        <a data-bind="text: name, click: $root.getLocationDetails" style="padding: 10px; text-decoration: none; display: block; cursor: pointer"></a>
       </div>
     </div>
-</div>
-  <div id="sidebar" class="sidebar" data-bind="visible: showSidebar">
-    <div id="marked-locations" data-bind="visible: showLocations, foreach: locations">
-    <p data-bind="text: name"></p>
-    <div class="marked-location" data-bind="text: infoWindowContent"></div>
-  </div>
-  <div id="locationdetails-container" data-bind="with: selectedLocation, visible: showLocationDetails">
-    <div id="locationdetails" data-bind="with: placeDetails">
-    <img data-bind="attr: {src: icon}">
-    <span data-bind="text: name"></span>
-    <span data-bind="text: formatted_address"></span>
-    <!-- ko if: 'photos' in $data -->
-    <div data-bind="foreach: photos">
-      <img data-bind="attr: {src: getUrl({maxWidth: 100, maxHeight: 100})}" style="width: 100px">
+    <div id="sidebar" class="sidebar" data-bind="visible: showSidebar">
+      <div id="sidebar-header" style="background-color: #336e7b; width: 100%; height: 50px; padding: 5px">
+
+          <div class="col-xs-2" style="text-align: left; padding-left: 0px">
+            <button data-bind="click: showListOfLocations" class="btn btn-default btn-md"><i class="fa fa-chevron-left"></i></button>
+          </div>
+          <div class="col-xs-8" style="text-align: center">
+
+          </div>
+          <div class="col-xs-2" style="text-align: right; padding-right: 0px">
+            <button data-bind="click: hideSidebar" class="btn btn-default btn-md"><i class="fa fa-times"></i></button>
+          </div>
+
+      </div>
+      <div id="marked-locations" data-bind="visible: showLocations, foreach: locations">
+        <a data-bind="text: name, click: $root.getLocationDetails" style="padding: 10px; text-decoration: none; display: block; cursor: pointer"></a>
+      </div>
+      <div id="locationdetails-container" data-bind="with: selectedLocation, visible: showLocationDetails" style="padding: 5px">
+        <div data-bind="foreach: themes" style="padding: 10px 0px">
+          <span data-bind="text: $data" style="background-color: black; color: white; padding: 10px"></span>
+        </div>
+        <div id="venuedetails-container" data-bind="with: venueDetails" style="padding: 5px; border: 1px solid darkgray; margin-top: 5px">
+          <h3 data-bind="text: name" style="display: block"></h3>
+          <div data-bind="with: location">
+            <!-- ko if: 'address' in $data -->
+            <span data-bind="text: address + ', '"></span>
+            <!-- /ko -->
+            <!-- ko if: 'city' in $data -->
+            <span data-bind="text: city + ' - '"></span>
+            <!-- /ko -->
+            <!-- ko if: 'postalCode' in $data -->
+            <span data-bind="text: postalCode + ', '"></span>
+            <!-- /ko -->
+            <!-- ko if: 'country' in $data -->
+            <span data-bind="text: country"></span>
+            <!-- /ko -->
+          </div>
+          <!-- ko if: 'description' in $data -->
+          <h4 data-bind="text: description" style="display: block"></h4>
+          <!-- /ko -->
+          <h4>Venue pics:</h4>
+          <div class="carousel">
+            <div data-bind="foreach: photos.groups[0].items">
+              <div data-bind="visible: $index() === $root.venueImageInFocusInSelectedLocation()" style="text-align: center">
+                <img data-bind="attr: {src: prefix + '100x100' + suffix}">
+              </div>
+            </div>
+            <a class="left carousel-control" data-bind="click: $root.focusPrevVenueImageInSelectedLocation" role="button">
+              <span class="fa fa-chevron-left no-select carousel-control-button"></span>
+            </a>
+            <a class="right carousel-control" data-bind="click: $root.focusNextVenueImageInSelectedLocation" role="button">
+              <span class="fa fa-chevron-right no-select carousel-control-button"></span>
+            </a>
+          </div>
+          <h4>Tips:</h4>
+          <div data-bind="foreach: tips.groups[tips.groups.length-1].items" style="background-color: darkslategray; color: white">
+            <div style="padding: 5px;">
+            <span data-bind="with: user">
+              <img data-bind="attr: {src: photo.prefix + '20x20' + photo.suffix}">
+              <span data-bind="text: firstName"></span>
+            </span>
+            <span data-bind="text: text" style="display: block; padding: 5px; border: 1px solid gray; margin-top: 5px"></span>
+          </div>
+          </div>
+        </div>
+        <div id="placedetails-container" data-bind="with: placeDetails" style="display:none; padding: 5px; border: 1px solid darkgray; margin-top: 5px">
+          <img data-bind="attr: {src: icon}">
+          <span data-bind="text: name"></span>
+          <span data-bind="text: formatted_address"></span>
+          <!-- ko if: 'photos' in $data -->
+          <h4>Place pics:</h4>
+          <div class="carousel">
+          <div data-bind="foreach: photos">
+            <div data-bind="visible: $index() === $root.placeImageInFocusInSelectedLocation()" style="text-align: center">
+              <img data-bind="attr: {src: getUrl({maxWidth: 100, maxHeight: 100})}" style="width: 100px">
+            </div>
+          </div>
+          <a class="left carousel-control" data-bind="click: $root.focusPrevPlaceImageInSelectedLocation" role="button">
+            <span class="fa fa-chevron-left no-select carousel-control-button"></span>
+          </a>
+          <a class="right carousel-control" data-bind="click: $root.focusNextPlaceImageInSelectedLocation" role="button">
+            <span class="fa fa-chevron-right no-select carousel-control-button"></span>
+          </a>
+        </div>
+          <!-- /ko -->
+        </div>
+      </div>
     </div>
-    <!-- /ko -->
-  </div>
-  </div>
   </div>
   <script type="text/javascript" src="/scripts/mapBuilder.js"></script>
 </body>
