--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCqYeMa0KpmrUDehCvtVLDb7W8FOy6vA3Y"></script>
 <script src="/scripts/knockout-3.3.0.js" type="text/javascript"></script>
+<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css">
 <script src="/scripts/bootstrap.min.js" type="text/css"></script>
 <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <style>
 body{
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 span.no-select {
   -webkit-user-select: none; /* webkit (safari, chrome) browsers */
@@ -31,8 +32,10 @@ span.no-select {
   }
   .searchbar-container{
     position: absolute;
+    left: 100px;
+    top: 30px;
     display: block;
-    width: 100%;
+    width: 75%;
   }
   .searchbar {
     padding: 10px;
@@ -45,6 +48,9 @@ span.no-select {
     border: none;
     box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.5);
     background-color: whitesmoke;
+    max-height: 250px;
+    overflow-y: auto;
+    overflow-x: none;
   }
 }
 @media screen and (min-width: 768px) {
@@ -72,7 +78,7 @@ span.no-select {
   border: none;
   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.5);
   background-color: whitesmoke;
-  max-height: 200px;
+  max-height: 250px;
   overflow-y: auto;
   overflow-x: none;
 }
@@ -108,9 +114,10 @@ span.no-select {
   padding: 0 0 0 5px;
   cursor: pointer;
   text-decoration: none !important;
+  font-family: 'Lato', sans-serif;
 }
 .carousel-control-button {
-  margin-top: 90%
+  margin-top: 93px
 }
 </style>
 </head>
@@ -134,7 +141,7 @@ span.no-select {
       <div id="sidebar-header" style="background-color: #336e7b; width: 100%; height: 50px; padding: 5px">
 
           <div class="col-xs-2" style="text-align: left; padding-left: 0px">
-            <button data-bind="click: showListOfLocations" class="btn btn-default btn-md"><i class="fa fa-chevron-left"></i></button>
+            <button data-bind="click: showListOfLocations, visible: showLocationDetails" class="btn btn-default btn-md"><i class="fa fa-chevron-left"></i></button>
           </div>
           <div class="col-xs-8" style="text-align: center">
 
@@ -151,7 +158,7 @@ span.no-select {
         <div data-bind="foreach: themes" style="padding: 10px 0px">
           <span data-bind="text: $data" style="background-color: black; color: white; padding: 10px"></span>
         </div>
-        <div id="venuedetails-container" data-bind="with: venueDetails" style="padding: 5px; border: 1px solid darkgray; margin-top: 5px">
+        <div id="venuedetails-container" data-bind="with: venueDetails" style="min-height: 100px; position: relative; padding: 5px; border: 1px solid darkgray; margin-top: 5px">
           <h3 data-bind="text: name" style="display: block"></h3>
           <div data-bind="with: location">
             <!-- ko if: 'address' in $data -->
@@ -174,7 +181,7 @@ span.no-select {
           <div class="carousel">
             <div data-bind="foreach: photos.groups[0].items">
               <div data-bind="visible: $index() === $root.venueImageInFocusInSelectedLocation()" style="text-align: center">
-                <img data-bind="attr: {src: prefix + '100x100' + suffix}">
+                <img data-bind="attr: {src: prefix + '200x200' + suffix}">
               </div>
             </div>
             <a class="left carousel-control" data-bind="click: $root.focusPrevVenueImageInSelectedLocation" role="button">
