--- a/index.html
+++ b/index.html
@@ -1,126 +1,146 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCqYeMa0KpmrUDehCvtVLDb7W8FOy6vA3Y"></script>
-<script src="/scripts/knockout-3.3.0.js" type="text/javascript"></script>
-<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-<link href="/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css">
-<script src="/scripts/bootstrap.min.js" type="text/css"></script>
-<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<style>
-body{
-  font-family: 'Roboto', sans-serif;
-}
-span.no-select {
-  -webkit-user-select: none; /* webkit (safari, chrome) browsers */
-  -moz-user-select: none; /* mozilla browsers */
-  -khtml-user-select: none; /* webkit (konqueror) browsers */
-  -ms-user-select: none; /* IE10+ */
-}
-.sidebar {
-  position: absolute;
-  background-color: whitesmoke;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  overflow-y: auto;
-}
-@media screen and (min-width: 320px) {
-  .sidebar {
-    width: 100%;
-  }
-  .searchbar-container{
-    position: absolute;
-    left: 100px;
-    top: 30px;
-    display: block;
-    width: 75%;
-  }
-  .searchbar {
-    padding: 10px;
-    border: none;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-  }
-  .searchsuggestions-container{
-    margin-top: 5px;
-    padding: 10px;
-    border: none;
-    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.5);
-    background-color: whitesmoke;
-    max-height: 250px;
-    overflow-y: auto;
-    overflow-x: none;
-  }
-}
-@media screen and (min-width: 768px) {
-.sidebar {
-  width: 25%;
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-}
-.searchbar-container{
-  position: absolute;
-  left: 100px;
-  top: 15px;
-  display: block;
-  width: 25%;
-}
-.searchbar {
-  padding: 10px;
-  border: none;
-  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
-}
-.searchsuggestions-container{
-  margin-top: 5px;
-  padding: 10px;
-  border: none;
-  box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.5);
-  background-color: whitesmoke;
-  max-height: 250px;
-  overflow-y: auto;
-  overflow-x: none;
-}
-}
-.marked-location{
-  padding: 10px;
-  box-shadow: 0px 2px white;
-}
-.header{
-  position: absolute;
-  top:0;
-  left: 0;
-  right: 0;
-  height: 50px;
-  background-color: #2c3e50;
-}
-.body{
-  position: absolute;
-  top: 50px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-.map{
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-.header-brand{
-  display: inline-block;
-  padding: 0 0 0 5px;
-  cursor: pointer;
-  text-decoration: none !important;
-  font-family: 'Lato', sans-serif;
-}
-.carousel-control-button {
-  margin-top: 93px
-}
-</style>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCqYeMa0KpmrUDehCvtVLDb7W8FOy6vA3Y"></script>
+  <script src="/scripts/knockout-3.3.0.js" type="text/javascript"></script>
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+  <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <script src="/scripts/bootstrap.min.js" type="text/css"></script>
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+
+    span.no-select {
+      -webkit-user-select: none;
+      /* webkit (safari, chrome) browsers */
+
+      -moz-user-select: none;
+      /* mozilla browsers */
+
+      -khtml-user-select: none;
+      /* webkit (konqueror) browsers */
+
+      -ms-user-select: none;
+      /* IE10+ */
+    }
+
+    .sidebar {
+      position: absolute;
+      background-color: whitesmoke;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      overflow-y: auto;
+    }
+
+    @media screen and (min-width: 320px) {
+      .sidebar {
+        width: 100%;
+      }
+      .searchbar-container {
+        position: absolute;
+        left: 100px;
+        top: 30px;
+        display: block;
+        width: 75%;
+      }
+      .searchbar {
+        padding: 10px;
+        border: none;
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+      }
+      .searchsuggestions-container {
+        margin-top: 5px;
+        padding: 10px;
+        border: none;
+        box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.5);
+        background-color: whitesmoke;
+        max-height: 250px;
+        overflow-y: auto;
+        overflow-x: none;
+      }
+    }
+
+    @media screen and (min-width: 768px) {
+      .sidebar {
+        width: 25%;
+        -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+      }
+      .searchbar-container {
+        position: absolute;
+        left: 100px;
+        top: 15px;
+        display: block;
+        width: 25%;
+      }
+      .searchbar {
+        padding: 10px;
+        border: none;
+        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+      }
+      .searchsuggestions-container {
+        margin-top: 5px;
+        padding: 10px;
+        border: none;
+        box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.5);
+        background-color: whitesmoke;
+        max-height: 250px;
+        overflow-y: auto;
+        overflow-x: none;
+      }
+    }
+
+    .marked-location {
+      padding: 10px;
+      box-shadow: 0px 2px white;
+    }
+
+    .header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 50px;
+      background-color: #2c3e50;
+    }
+
+    .body {
+      position: absolute;
+      top: 50px;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+
+    .map {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+
+    .header-brand {
+      display: inline-block;
+      padding: 0 0 0 5px;
+      cursor: pointer;
+      text-decoration: none !important;
+      font-family: 'Lato', sans-serif;
+    }
+
+    .carousel-control-button {
+      margin-top: 93px
+    }
+  </style>
 </head>
+
 <body>
   <div class="header">
     <a class="header-brand">
@@ -140,15 +160,15 @@ span.no-select {
     <div id="sidebar" class="sidebar" data-bind="visible: showSidebar">
       <div id="sidebar-header" style="background-color: #336e7b; width: 100%; height: 50px; padding: 5px">
 
-          <div class="col-xs-2" style="text-align: left; padding-left: 0px">
-            <button data-bind="click: showListOfLocations, visible: showLocationDetails" class="btn btn-default btn-md"><i class="fa fa-chevron-left"></i></button>
-          </div>
-          <div class="col-xs-8" style="text-align: center">
+        <div class="col-xs-2" style="text-align: left; padding-left: 0px">
+          <button data-bind="click: showListOfLocations, visible: showLocationDetails" class="btn btn-default btn-md"><i class="fa fa-chevron-left"></i></button>
+        </div>
+        <div class="col-xs-8" style="text-align: center">
 
-          </div>
-          <div class="col-xs-2" style="text-align: right; padding-right: 0px">
-            <button data-bind="click: hideSidebar" class="btn btn-default btn-md"><i class="fa fa-times"></i></button>
-          </div>
+        </div>
+        <div class="col-xs-2" style="text-align: right; padding-right: 0px">
+          <button data-bind="click: hideSidebar" class="btn btn-default btn-md"><i class="fa fa-times"></i></button>
+        </div>
 
       </div>
       <div id="marked-locations" data-bind="visible: showLocations, foreach: locations">
@@ -194,14 +214,15 @@ span.no-select {
           <h4>Tips:</h4>
           <div data-bind="foreach: tips.groups[tips.groups.length-1].items" style="background-color: darkslategray; color: white">
             <div style="padding: 5px;">
-            <span data-bind="with: user">
-              <img data-bind="attr: {src: photo.prefix + '20x20' + photo.suffix}">
-              <span data-bind="text: firstName"></span>
-            </span>
-            <span data-bind="text: text" style="display: block; padding: 5px; border: 1px solid gray; margin-top: 5px"></span>
-          </div>
+              <span data-bind="with: user">
+                <img data-bind="attr: {src: photo.prefix + '20x20' + photo.suffix}">
+                <span data-bind="text: firstName"></span>
+              </span>
+              <span data-bind="text: text" style="display: block; padding: 5px; border: 1px solid gray; margin-top: 5px"></span>
+            </div>
           </div>
         </div>
+        <button class="btn btn-lg btn-primary" style="width: 100%; margin-top: 10px" data-bind="click: $root.showNearbyAtmsForSelectedLocation">Show nearby services</button>
         <div id="placedetails-container" data-bind="with: placeDetails" style="display:none; padding: 5px; border: 1px solid darkgray; margin-top: 5px">
           <img data-bind="attr: {src: icon}">
           <span data-bind="text: name"></span>
@@ -209,18 +230,18 @@ span.no-select {
           <!-- ko if: 'photos' in $data -->
           <h4>Place pics:</h4>
           <div class="carousel">
-          <div data-bind="foreach: photos">
-            <div data-bind="visible: $index() === $root.placeImageInFocusInSelectedLocation()" style="text-align: center">
-              <img data-bind="attr: {src: getUrl({maxWidth: 100, maxHeight: 100})}" style="width: 100px">
+            <div data-bind="foreach: photos">
+              <div data-bind="visible: $index() === $root.placeImageInFocusInSelectedLocation()" style="text-align: center">
+                <img data-bind="attr: {src: getUrl({maxWidth: 100, maxHeight: 100})}" style="width: 100px">
+              </div>
             </div>
+            <a class="left carousel-control" data-bind="click: $root.focusPrevPlaceImageInSelectedLocation" role="button">
+              <span class="fa fa-chevron-left no-select carousel-control-button"></span>
+            </a>
+            <a class="right carousel-control" data-bind="click: $root.focusNextPlaceImageInSelectedLocation" role="button">
+              <span class="fa fa-chevron-right no-select carousel-control-button"></span>
+            </a>
           </div>
-          <a class="left carousel-control" data-bind="click: $root.focusPrevPlaceImageInSelectedLocation" role="button">
-            <span class="fa fa-chevron-left no-select carousel-control-button"></span>
-          </a>
-          <a class="right carousel-control" data-bind="click: $root.focusNextPlaceImageInSelectedLocation" role="button">
-            <span class="fa fa-chevron-right no-select carousel-control-button"></span>
-          </a>
-        </div>
           <!-- /ko -->
         </div>
       </div>
@@ -228,4 +249,5 @@ span.no-select {
   </div>
   <script type="text/javascript" src="/scripts/mapBuilder.js"></script>
 </body>
+
 </html>
