first thoughts, incomplete... but also a lot ;-)

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       overflow-y: auto;
     }
 
+    /* would maybe be nice to have a comment
+      saying what kind of device this is targeting and what it does
+      (eg; hide sidebar on mobile)
+    */
     @media screen and (min-width: 320px) {
       .sidebar {
         width: 100%;
@@ -66,6 +70,7 @@
       }
     }
 
+    /* ditto here */
     @media screen and (min-width: 768px) {
       .sidebar {
         width: 25%;
