--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>tourmap - your tour partner</title>
         <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
-        <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-        <link href="stylesheets/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-        <link href="stylesheets/offline-theme-chrome.css" rel="stylesheet" type="text/css">
-        <link href="stylesheets/offline-content-english.css" rel="stylesheet" type="text/css">
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCqYeMa0KpmrUDehCvtVLDb7W8FOy6vA3Y"></script>
-        <script src="scripts/knockout-3.3.0.js" type="text/javascript"></script>
-        <script src="scripts/jquery.js" type="text/javascript"></script>
-        <script src="scripts/bootstrap.min.js" type="text/javascript"></script>
-        <script src="scripts/offline.js" type="text/javascript"></script>
-        <script type="text/javascript">
+        <link href="stylesheets/offline-theme-chrome.css" rel="stylesheet">
+        <link href="stylesheets/offline-content-english.css" rel="stylesheet">
+        <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCqYeMa0KpmrUDehCvtVLDb7W8FOy6vA3Y"></script>
+        <script src="scripts/knockout-3.3.0.js"></script>
+        <script src="scripts/jquery.js"></script>
+        <script src="scripts/bootstrap.min.js"></script>
+        <script src="scripts/offline.js"></script>
+        <script>
             var run = function() {
-                if (Offline.state === 'up')
+                if (Offline.state === "up")
                     Offline.check();
             }
             setInterval(run, 5000);
         </script>
         <style>
+
             body {
-                font-family: 'Roboto', sans-serif;
+                font-family: "Roboto", sans-serif;
             }
 
             button:focus {
@@ -52,6 +53,7 @@
             }
 
             @media screen and (min-width: 320px) {
+
                 .sidebar {
                     width: 100%;
                 }
@@ -65,26 +67,28 @@
                 .searchbar {
                     padding: 10px;
                     border: none;
-                    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+                    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
                 }
                 .searchsuggestions-container {
                     margin-top: 5px;
                     padding: 10px;
                     border: none;
-                    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.5);
+                    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
                     background-color: whitesmoke;
                     max-height: 250px;
                     overflow-y: auto;
                     overflow-x: none;
                 }
+
             }
 
             @media screen and (min-width: 768px) {
+
                 .sidebar {
                     width: 25%;
-                    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-                    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-                    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+                    -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
+                    -moz-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
+                    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
                 }
                 .searchbar-container {
                     position: absolute;
@@ -96,23 +100,24 @@
                 .searchbar {
                     padding: 10px;
                     border: none;
-                    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+                    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.75);
                 }
                 .searchsuggestions-container {
                     margin-top: 5px;
                     padding: 10px;
                     border: none;
-                    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.5);
+                    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
                     background-color: whitesmoke;
                     max-height: 250px;
                     overflow-y: auto;
                     overflow-x: none;
                 }
+
             }
 
             .marked-location {
                 padding: 10px;
-                box-shadow: 0px 2px white;
+                box-shadow: 0 2px white;
             }
 
             .header {
@@ -145,7 +150,7 @@
                 padding: 0 0 0 5px;
                 cursor: pointer;
                 text-decoration: none !important;
-                font-family: 'Lato', sans-serif;
+                font-family: "Lato", sans-serif;
             }
 
             .carousel-control-button {
@@ -177,6 +182,7 @@
                 line-height: 1.42;
                 border-radius: 50%;
             }
+
         </style>
     </head>
 
@@ -200,13 +206,13 @@
             <div id="sidebar" class="sidebar" data-bind="visible: showSidebar">
                 <div id="sidebar-header" style="background-color: #336e7b; width: 100%; height: 50px; padding: 5px">
 
-                    <div class="col-xs-2" style="text-align: left; padding-left: 0px">
+                    <div class="col-xs-2" style="text-align: left; padding-left: 0">
                         <button data-bind="click: showListOfLocations, visible: showLocationDetails" class="btn btn-default btn-md"><i class="fa fa-chevron-left"></i></button>
                     </div>
                     <div class="col-xs-8" style="text-align: center">
 
                     </div>
-                    <div class="col-xs-2" style="text-align: right; padding-right: 0px; padding-left: 0px">
+                    <div class="col-xs-2" style="text-align: right; padding-right: 0; padding-left: 0">
                         <button data-bind="click: hideSidebar" class="btn btn-default btn-md"><i class="fa fa-times"></i></button>
                     </div>
 
@@ -221,7 +227,7 @@
                     </div>
                 </div>
                 <div id="locationdetails-container" data-bind="with: selectedLocation, visible: showLocationDetails" style="padding: 5px">
-                    <div data-bind="foreach: themes" style="padding: 10px 0px">
+                    <div data-bind="foreach: themes" style="padding: 10px 0">
                         <a data-bind="text: $data" href="#" style="background-color: black; color: white; padding: 10px; text-decoration: none"></a>
                     </div>
                     <div style="padding: 5px">
@@ -236,7 +242,7 @@
                             </div>
                     </div>
                     <div id="venuedetails-container" data-bind="with: venueDetails" style="min-height: 100px; position: relative; padding: 5px; border: 1px solid darkgray; margin-top: 5px">
-                        <div data-bind="visible: $root.isLoading" class="loader" style="position: absolute; top: 50px; left: 50%; margin-left: 0px; margin-top: 0px;"></div>
+                        <div data-bind="visible: $root.isLoading" class="loader" style="position: absolute; top: 50px; left: 50%; margin-left: 0; margin-top: 0;"></div>
                         <div>
                             <h4 data-bind="text: name" style="display: block"></h4>
                             <div data-bind="with: location">
@@ -285,9 +291,9 @@
                 </div>
             </div>
         </div>
-        <script type="text/javascript" src="/scripts/models.js"></script>
-        <script type="text/javascript" src="/scripts/services.js"></script>
-        <script type="text/javascript" src="/scripts/viewmodels.js"></script>
-        <script type="text/javascript" src="/scripts/mapBuilder.js"></script>
+        <script src="scripts/models.js"></script>
+        <script src="scripts/services.js"></script>
+        <script src="scripts/viewmodels.js"></script>
+        <script src="scripts/mapBuilder.js"></script>
     </body>
 </html>
